Changes for SVN:

plugins/common/plugin_common.c: wrong param type.
Nicolas Weeger 2007-04-29

plugins/cfanim/cfanim.c: fixed a crash occuring when ghosting a DM. Made the
   Animator work by making it listening to the time event. Fixed the bug that
   left the player invisible after having been ghosted.
   Made the paralyze option of animation files to work.
Yann Chachkoff 2007-04-29

server/plugins.c, plugins/cfpython/cfpython_object.c: Fix type mismatch in
   varargs function parameters.
Andreas Kirschbaum 2007-04-28

server/disease.c: fix bug #1706986: Rabies can infect a DM. DMs are now immune
 and non contagious.
Nicolas Weeger 2007-04-28

Change the version string from 1.9.1 to 2.0-dev for trunk.
Alex Schultz 2007-04-28

socket/loop.c: fix unitialized variable.
Nicolas Weeger 2007-04-28

plugins/cfpython/cfpython_object.c: fix wrong property set (value is int).
Nicolas Weeger 2007-04-28

server/player.c:  No need to copy faces_sent - just use the data already
   there, and set ns->faces_sent to NULL so we know there is no data there.
socket/init.c: Allocate ns->faces_sent if not there.
MSW 2007-04-25

socket/init.c: Change free calls with FREE_AND_CLEAR - were getting double
   frees - since pointer wasn't reset, was no way for program to know not
   to have the data cleared again.
MSW 2007-04-24

server/disease.c: In move symptom() stop processing if victim dies. This
   prevents access to freed objects.
server/gods.c: In tailor_god_spell() do not pass NULL value to add_string().
server/spell_effect.c, server/alchemy.c: Fix format arguments of calls to
   draw_ext_info_format().
server/disease.c: In move_symptom() fix possible buffer overflow when creating
   symptom names.
Andreas Kirschbaum 2007-04-25

server/spell_effect.c: In polymorph_item() fix possible access to freed
   object.
common/los.c: In update_los() fix array out-of-bounds access for clients using
   25x25 map size.
Andreas Kirschbaum 2007-04-24
